--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,15 @@ src/**/*.css
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+*.db
+.DS_Store
+venv
+env
+__pycache__
+blog_old.md
+node_modules
+.idea/*
+*.pyc
+tmp
+static/dist
