--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,29 @@
 alembic==0.8.7
 bcrypt==3.1.0
+certifi==2018.1.18
 cffi==1.7.0
+chardet==3.0.4
 click==6.6
 coverage==4.2
+dominate==2.3.1
 Flask==0.11.1
 Flask-Bcrypt==0.7.1
+Flask-Bootstrap==3.3.7.1
+Flask-Login==0.4.1
 Flask-Migrate==2.0.0
 Flask-Script==2.0.5
 Flask-SQLAlchemy==2.1
 Flask-Testing==0.5.0
+Flask-WTF==0.14.2
 GitHub-Flask==3.1.3
 gunicorn==19.6.0
+idna==2.6
 itsdangerous==0.24
 Jinja2==2.8
 Mako==1.0.4
 MarkupSafe==0.23
 mysql-connector==2.1.4
+mysql-connector-python==8.0.6
 psycopg2==2.7.1
 py==1.4.31
 py-bcrypt==0.4
@@ -23,8 +31,12 @@ pycparser==2.14
 pytest==3.0.1
 pytest-cov==2.3.1
 pytest-flask==0.10.0
+python-dateutil==2.7.0
 python-editor==1.0.1
 requests==2.11.1
 six==1.10.0
 SQLAlchemy==1.0.14
+urllib3==1.22
+visitor==0.1.3
 Werkzeug==0.11.10
+WTForms==2.1
