--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ Flask-Migrate==2.0.0
 Flask-Script==2.0.5
 Flask-SQLAlchemy==2.1
 Flask-Testing==0.5.0
+Flask-Uploads==0.2.1
 Flask-WTF==0.14.2
 GitHub-Flask==3.1.3
 gunicorn==19.6.0
@@ -25,6 +26,7 @@ Mako==1.0.4
 MarkupSafe==0.23
 mysql-connector==2.1.4
 mysql-connector-python==8.0.6
+PIL==1.1.7
 Pillow==5.0.0
 pillowcase==2.0.0
 psycopg2==2.7.1
